Fixed a stretched icon

--- a/NFT Preview/style.css
+++ b/NFT Preview/style.css
@@ -112,6 +112,7 @@ a:hover {
 .time {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   gap: 10px;
 }
 
